# e-commerceCustomerSupportAgent

./: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  env_sample  init.sh  main.py  pyproject.toml  requirements.txt  run_test_coverage.sh  schemas.py  setup_db.py
.github/workflow/: test.yml
agents/: conversation_agent.py
app/: config.py  main.py  setup_db.py
app/agents/: conversation_agent.py
app/api/routes/: chat.py  orders.py  pages.py
app/api/schemas/: schemas.py
app/core/: assets.py  logging.py  templates.py
app/core/exceptions/: handlers.py  http_exceptions.py
app/domain/: contact_request.py  order.py  policies.py
app/infrastructure/db/models/: order.py
app/infrastructure/repositories/: contact_repository.py  order_repository.py
app/infrastructure/tools/: human_rep_tool.py  order_status_tool.py  policies_tool.py
app/services/: chat_service.py  human_rep_service.py  order_service.py
app/static/: script.js  styles.css
app/templates/: index.html
app/use_cases/: logging.py
app/use_cases/humans/: escalate_to_human.py
app/use_cases/orders/: track_order.py
app/use_cases/policies/: get_return_policy.py
app/utils/: prompts.py
migrations/: README  env.py
tests/: conftest.py  test_main.py
tests/api/: test_chat.py  test_orders.py  test_pages.py
tests/repositories/: test_contact_repository.py  test_order_repository.py
tests/services/: test_order_status_service.py
tools/: human_rep_tool.py  order_status_tool.py  policies_tool.py
